Fix various bugs 1. Fix unfocus after adding module 2. Fix scroll bug on iOS 3. Show tip on focus on desktop

--- a/v3/src/js/views/components/Modal.scss
+++ b/v3/src/js/views/components/Modal.scss
@@ -3,18 +3,23 @@
 /*
   Remove scroll on the body when react-modal is open
   Link: https://github.com/reactjs/react-modal#body-class
+  iOS bug: https://www.eventbrite.com/engineering/mobile-safari-why/
+  Workaround for iOS bug: always shows bottom nav bar.
+  See ModulesSelect.jsx with noScroll implementation.
 */
 :global(.ReactModal__Body--open) {
   overflow: hidden;
 }
 
 .modal {
+  $spacing: 1rem;
+
   position: absolute;
-  top: 1rem;
-  right: 1rem;
-  left: 1rem;
+  top: $spacing;
+  right: $spacing;
+  left: $spacing;
   max-width: 40rem;
-  max-height: calc(90%);
+  max-height: calc(100% - #{2 * $spacing});
   padding: 1rem;
   margin: 0 auto;
   overflow: auto;
@@ -23,6 +28,7 @@
 
   @include media-breakpoint-up(md) {
     top: 10%;
+    max-height: 90%;
     padding: 2rem;
   }
 }
