--- a/v3/src/js/views/components/ModulesSelect.scss
+++ b/v3/src/js/views/components/ModulesSelect.scss
@@ -4,10 +4,6 @@ $module-list-height: 13.5rem;
 
 .container {
   position: relative;
-
-  @include media-breakpoint-down(sm) {
-    height: 100%;
-  }
 }
 
 .input {
@@ -21,9 +17,15 @@ $module-list-height: 13.5rem;
   }
 }
 
-.modal .input {
-  border-width: 0 0 1px;
-  border-radius: 0;
+.modal {
+  .container {
+    height: 100%;
+  }
+
+  .input {
+    border-width: 0 0 1px;
+    border-radius: 0;
+  }
 }
 
 .close {
@@ -35,12 +37,15 @@ $module-list-height: 13.5rem;
 }
 
 // Override offsets in Modal.scss
-.modal {
-  @include media-breakpoint-down(sm) {
+div > .modal {
+  height: 100%;
+
+  @include media-breakpoint-down(xs) {
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+    max-width: 100%;
     max-height: 100%;
     padding: 0;
   }
@@ -55,7 +60,7 @@ $module-list-height: 13.5rem;
   -webkit-overflow-scrolling: touch;
 }
 
-@include media-breakpoint-up(sm) {
+@include media-breakpoint-up(md) {
   .selectList,
   .tip {
     position: absolute;
